QmidiCtl - A MIDI Remote Controller via UDP/IP Multicast
--------------------------------------------------------

ChangeLog


GIT HEAD

- Added alternate yet non-official CMake build option.
  (EXPERIMENTAL)

- Fix HiDPI display screen effective support (Qt >= 5.6).

- Added left/right swipe gestures to navigate over mixer
  strip pages. (EXPERIMENTAL)
  
- Make sure compiler flags comply to c++11 as standard.


0.5.5  2019-07-12  A Summer'19 Release.

- Multi-touch/finger support has been introduced.

- Updated for the newer Qt5 development tools (>= 5.13).

- Configure updated to check for qtchooser availability.

- Minor update to Debian packaging control file.


0.5.4  2019-04-11  A Spring-Break'19 Release

- Fix build on linux with musl (according to POSIX.1-2001,
  POSIX.1-2008; PR#3 by Andreas Müller aka. schnitzeltony,
  thanks).

- HiDPI display screen support (Qt >= 5.6).


0.5.3  2019-01-08  An Early Winter'19 Release

- Added proper display names to Command and Control Type
  entry fields on Configure dialog (ie. MIDI controller
  assignments dialog).

- Old deprecated Qt4 build support is no more.

- AppData/AppStream metadata is now settled under an all
  permisssive license (FSFAP); also updated to be the most
  compliant with latest freedesktop.org specification and
  recommendation.


0.5.2  2018-06-30  An Early Summer'18 release.

- Fixed all mixer strips for a larger width on main layout.

- Fixed for some g++ >= 8.1.1 warnings and quietness.

- Yes, Android GA is now official.


0.5.1  2018-01-11  An Early Winter'18 release.

- A little hardening on the configure (autoconf) macro side.

- A rather naive attempt to port to the Android-Qt platform;
  also introducing an (Android) Action Bar menu look-a-like.


0.5.0  2017-12-16  End of Autum'17 release.

- Desktop entry specification file is now finally independent
  from build/configure template chains.

- Updated target path for freedesktop.org's AppStream metainfo
  file (formerly AppData).

