@@ -91,6 +91,10 @@ endif ()
 
 target_link_libraries (${NAME} PRIVATE Qt5::Widgets)
 
+if (CONFIG_IPV6)
+  target_link_libraries (${NAME} PRIVATE Qt5::Network)
+endif ()
+
 
 if (UNIX AND NOT APPLE)
   install (TARGETS ${NAME} RUNTIME
